extenstion overflow fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,6 @@
     text-align: center;
     min-height: 600px;
     min-width: 362px;
-
+    overflow-y: auto;
 }
 
